# kleis

./: .cursorignore  .cursorrules  .gitattributes  .gitignore  ADR009_PHASE2_COMPLETE.md  ARBITRARY_MATRIX_SOLUTION.md  BingSiteAuth.xml  CACHE_DETECTION_ADDED.md  CACHE_ISSUE_FIX.md  CALIBRATION_FLAG_GUIDE.md  CHANGELOG.md  CNAME  COMMIT_INSTRUCTIONS.md  COMMIT_INSTRUCTIONS_SEMANTIC.md  COMPARISON_REPORT_REGENERATED.md  COMPLETE_UPDATE_SUMMARY.md  COORDINATE_EXTRACTION_INVESTIGATION.md  COORDINATE_PREFERENCE_FLAG.md  COORDINATE_SYSTEM_ANALYSIS.md  COVERAGE_REPORT.md  CURRENT_STATE_Z3_FIX.md  Cargo.toml  DEBUG_STRUCTURAL_MODE.md  DEFINITIVE_FIX.md  DOCUMENTATION_AUDIT_NOV_2024.md  DOCUMENTATION_CLEANUP.md  DOCUMENTATION_CLEANUP_PLAN.md  DOCUMENTATION_ORGANIZATION.md  EDITOR_TEMPLATES_UPDATE.md  EDIT_MARKER_ASSESSMENT.md  ENHANCED_DEBUG_GUIDE.md  FEATURE_COVERAGE.md  FINAL_CONSOLIDATION_PLAN.md  FINAL_FIX_INSTRUCTIONS.md  HTML_TEMPLATE_TEST_REPORT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PHASE1_COMPLETE.md  INLINE_EDITING_IMPLEMENTATION_STATUS.md  INLINE_EDITING_TEST_PLAN.md  INLINE_EDITING_USER_GUIDE.md  (+93 more)
.cargo/: config.toml
.cursor/: mcp.json
bourbaki/: 01_sets.kleis  02_algebra.kleis  03_topology.kleis  04_analysis.kleis  05_tvs.kleis  06_integration.kleis  07_commutative.kleis  08_lie.kleis  09_spectral.kleis  README.md  test.kleis
config/: kleis.toml
docs/: ADR-016-operations-in-structures.md  ARXIV_INTEGRATION_VISION.md  BRANCH_ISABELLE_BACKEND.md  CAPABILITY_ASSESSMENT.md  COMPUTATIONAL_COMPLEXITY_ANALYSIS.md  COORDINATE_SYSTEM_REVIEW.md  DOCUMENTATION_REORGANIZATION.md  GITHUB_ACTIONS_SETUP.md  INLINE_EDITING_BUTTON_BEHAVIOR.md  INTEGRAL_TRANSFORMS_POT.md  INTEGRAL_TRANSFORMS_QUICKSTART.md  INTEGRAL_TRANSFORMS_REFERENCE.md  KLEIS_EVALUATION_SYNTAX.md  KLEIS_PARSER_STATUS.md  KLEIS_TYPE_SYSTEM.md  KLEIS_TYPE_UX.md  LATEX_PARSING_ANALYSIS.md  NEXT_SESSION.md  OPERATOR_INVENTORY.md  ORGANIZATION_SUMMARY.md  PLOTTING_ROADMAP.md  QUALITY_GATES.md  README.md  ROADMAP.md  THESIS_BLOCKERS.md  TYPST_TEXT_IN_MATH.md  VISION.md  adr-002-eval-vs-simplify.md  adr-008-bootstrap-grammar-boundary.md  adr-009-wysiwyg-structural-editor.md  adr-012-document-authoring.md  adr-014-hindley-milner-type-system.md  adr-017-vite-patternfly-frontend.md  adr-018-universal-formalism.md  adr-020-metalanguage-for-type-theory.md  adr-021-algebraic-data-types.md  config.md  equation-editor-architecture.md  kleis_grammar_v02.ebnf  kleis_grammar_v02.md  (+1 more)
eqnlib/: base.kleis  lists.kleis  matrix.kleis  test_matrix.kleis
examples/: breakpoint_test.kleis  debug_helper.kleis  debug_main.kleis  debug_test.kleis  einstein_equations_contracted.json  einstein_equations_tensor.json  example_blocks.kleis  fibonacci.kleis  html_rendering_demo.rs  inverted_pendulum.kleis  inverted_pendulum_discrete.kleis  lambda_demo.kleis  mass_from_residue.kleis  pendulum_poles.kleis  prefix_operators.kleis  test_einstein_contracted.rs  test_einstein_left_side.rs  test_einstein_semantic.rs  test_einstein_simple.rs  test_einstein_tensor.rs  test_placeholder_extraction.rs  test_plus_tensor_var.rs  test_scalar_times_placeholder.rs  test_scalar_times_tensor.rs  test_tensor_plus.rs  test_typst_library.rs  type_alias.kleis  type_inference_demo.rs  typst_compile_demo.rs  typst_demo.rs  typst_render_demo.rs  unicode_rendering_demo.rs
experiments/cross-compiler/rust/: Cargo.toml  examples  examples.rs  fib  fib.rs  fib_raw.rs  more_examples  more_examples.rs  solver_api.rs  symbolic.rs
experiments/cross-compiler/rust/src/: fib_module.rs  lib.rs  module_abi.rs  solver.rs  symbolic.rs
graph-editor-wasm/: Cargo.toml
graph-editor-wasm/src/: lib.rs
kleis-notebook/: README.md  Untitled.ipynb  pyproject.toml  run_all_tests.py  run_all_tests.sh  start-jupyter.sh
kleis-notebook/examples/: complete_demo.kleis  demo_document_styles.py  export_demo.py  getting_started.ipynb  test_edit_operations.py  test_equation_editor.py  test_kleisdoc.py  test_latex_to_typst.py  test_plotting.ipynb  test_quadratic.py  test_render_pipeline.py  test_save_load.py  test_thesis_management.py
kleis-notebook/examples/styles/: academic_article.kleis
kleis-notebook/examples/test_output/: arxiv_paper.kleis  arxiv_paper.typ  arxiv_paper_demo.typ  arxiv_paper_proof.typ  arxiv_rich.typ  arxiv_thesis_demo.typ  mit_rich.typ  mit_thesis.kleis  mit_thesis.typ  mit_thesis_demo.typ  mit_thesis_proof.typ  quadratic_test.typ  quantum_thesis.kleis  quantum_thesis.typ  round_trip_a.kleis  round_trip_b.kleis  round_trip_b.kleisdoc  test_doc.kleis  test_doc.typ  test_equations.kleis  test_equations.kleisdoc  test_figures.kleis  test_figures.kleisdoc  test_save.kleis  test_save.kleisdoc  test_section_labels.kleis  test_structure.kleis  test_structure.kleisdoc  uofm_debug.typ  uofm_thesis_demo.typ  uofm_thesis_proof.typ
kleis-notebook/examples/thesis_demo/: thesis.kleis  thesis.typ
kleis-notebook/examples/uofm_thesis/: uofm_thesis.kleis  uofm_thesis.typ
kleis-notebook/kleis_kernel/: __init__.py  __main__.py  equation_editor.py  install.py  install_numeric.py  kernel.py  kleis_binary.py  kleisdoc.py  kleisdoc_shell.py  numeric_kernel.py
kleis-test-macros/: Cargo.toml
patternfly-editor/: README.md  index.html  package-lock.json  package.json
pot_video_90/: slides.txt
scripts/: README.md  build-kleis.sh  check_markdown_links.pl  check_markdown_links.py  check_markdown_links.sh  check_z3_setup.sh  deploy-site.sh  fetch_dlmf.py  fetch_dlmf_v2.py  generate_sitemap.py  inspect_dlmf.py  install-git-hooks.sh  kleis  kleis-review.sh  policy.sh  postbuild-manual.sh  pre-push.sh  reinstall_kleis_vscode_extensions.sh  run-all-tests.sh  run-repl.sh  test_dap.sh  test_dap_direct.py  test_isabelle_connection.py  test_lsp.sh  theory.sh  validate_kleis_in_docs.py  validate_manual_examples.py
src/: ast.rs  axiom_verifier.rs  config.rs  context.rs  dap.rs  data_registry.rs  debug.rs  dimension_solver.rs  editor_ast.rs  editor_type_translator.rs  evaluator.rs  kleis_ast.rs  kleis_parser.rs  kleist_parser.rs  lib.rs  logging.rs  lowering.rs  main.rs  ode.rs  parser.rs  (+15 more)
(+1730 files in other folders)
