[workspace]
members = [".", "render"]

[package]
name = "kleis"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web server
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Math layout engine
typst = "0.12"
typst-svg = "0.12"
typst-assets = { version = "0.12", features = ["fonts"] }
comemo = "0.4"
regex = "1.10"
time = { version = "0.3", features = ["macros"] }
roxmltree = "0.20"  # XML parsing for SVG transform extraction
uuid = { version = "1.0", features = ["v4"] }

# Theorem prover (optional - for axiom verification)
# Using local clone because published crate has different API
z3 = { path = "../Z3/z3.rs/z3", optional = true }

[features]
# Default features (enabled by default)
default = ["axiom-verification"]

# Axiom verification using Z3 theorem prover
# Can be disabled with: cargo build --no-default-features
axiom-verification = ["z3"]

[[bin]]
name = "gallery"
path = "src/bin/gallery.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "test_parser"
path = "src/bin/test_parser.rs"

[[bin]]
name = "check_parser"
path = "src/bin/check_parser.rs"

[[bin]]
name = "roundtrip_test"
path = "src/bin/roundtrip_test.rs"

[[bin]]
name = "test_guide_examples"
path = "src/bin/test_guide_examples.rs"

[[bin]]
name = "test_top5"
path = "src/bin/test_top5.rs"

[[example]]
name = "typst_demo"
path = "examples/typst_demo.rs"
