[workspace]
members = [".", "render", "kleis-test-macros"]

[package]
name = "kleis"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web server
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Math layout engine
typst = "0.12"
typst-svg = "0.12"
typst-assets = { version = "0.12", features = ["fonts"] }
comemo = "0.4"
regex = "1.10"
time = { version = "0.3", features = ["macros"] }
roxmltree = "0.20"  # XML parsing for SVG transform extraction
uuid = { version = "1.0", features = ["v4"] }

# Theorem prover (optional - for axiom verification)
# Vendored z3.rs bindings (simpler API than published crate)
z3 = { path = "vendor/z3", optional = true }

# REPL (interactive shell)
rustyline = "14.0"

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Language Server Protocol (LSP)
tower-lsp = "0.20"
lsp-types = "0.97"
ropey = "1.6"           # Efficient text rope for document handling
dashmap = "6.0"         # Concurrent hashmap for document storage

# Numerical linear algebra (BLAS/LAPACK)
ndarray = { version = "0.16", optional = true }
ndarray-linalg = { version = "0.17", optional = true }
nalgebra = { version = "0.33", optional = true }  # For pure-Rust Schur (dev/testing)
lapack = { version = "0.19", optional = true }    # For LAPACK dgees (production Schur)
ode_solvers = "0.6.1"

[features]
# Default features (enabled by default)
default = ["axiom-verification"]

# Axiom verification using Z3 theorem prover
# Can be disabled with: cargo build --no-default-features
axiom-verification = ["z3"]

# Numerical linear algebra (BLAS/LAPACK backend)
# Enables eigenvalues, SVD, solve, Schur, etc.
numerical = ["ndarray", "ndarray-linalg", "nalgebra", "lapack", "blas-src", "lapack-src"]

[[bin]]
name = "gallery"
path = "src/bin/gallery.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "test_parser"
path = "src/bin/test_parser.rs"

[[bin]]
name = "check_parser"
path = "src/bin/check_parser.rs"

[[bin]]
name = "roundtrip_test"
path = "src/bin/roundtrip_test.rs"

[[bin]]
name = "test_guide_examples"
path = "src/bin/test_guide_examples.rs"

[[bin]]
name = "test_top5"
path = "src/bin/test_top5.rs"

[[bin]]
name = "repl"
path = "src/bin/repl.rs"

[[bin]]
name = "kleis-lsp"
path = "src/bin/lsp.rs"

[[bin]]
name = "kleis"
path = "src/bin/kleis.rs"

[[example]]
name = "typst_demo"
path = "examples/typst_demo.rs"

[dev-dependencies]
kleis-test-macros = { path = "kleis-test-macros" }

# Platform-specific BLAS/LAPACK backends for numerical feature
# macOS: Uses Apple Accelerate (pre-installed, M1/M2/M3 optimized)
[target.'cfg(target_os = "macos")'.dependencies]
blas-src = { version = "0.10", features = ["accelerate"], optional = true }
lapack-src = { version = "0.10", features = ["accelerate"], optional = true }

# Linux: Uses OpenBLAS
[target.'cfg(target_os = "linux")'.dependencies]
blas-src = { version = "0.10", features = ["openblas"], optional = true }
lapack-src = { version = "0.10", features = ["openblas"], optional = true }

# Windows: Uses OpenBLAS
[target.'cfg(target_os = "windows")'.dependencies]
blas-src = { version = "0.10", features = ["openblas"], optional = true }
lapack-src = { version = "0.10", features = ["openblas"], optional = true }
